# opinion-trade-api

./: AGENTS.md  Cargo.toml  mise.toml
.agents/: knowledge.md
examples/: list_markets.rs
src/: lib.rs  models.rs  requests.rs  rest_client.rs
src/models/: market.rs  market_raw.rs  market_status_filter.rs
src/requests/: market_page_request.rs
